V7.0: (Under development)
  * Fixed issue #722: Simplify custom header drawing while keeping default drawing
  * Fixed issue #467: Multi level checkboxes and BeginUpdate/EndUpdate issue

V6.7: (29 May 2017)
  * Fixed issue #714: Integer overflow in TBaseVirtualTree's InternalAddFromStream
  * Fixed issue #500: Issue with node selection "from code" for disabled nodes with toLevelSelectConstraint option  
  * Fixed issue #499: Incorrect behavior with toLevelSelectConstraint and ctrl+A 
  * Fixed issue #649: Cell navigation problems with toAutoSpanColumns for left and right keys
  * Fixed issue #712: Strange behaviour of AutoFitColumns
  * Fixed issue #718: Shift + Right-Click should not extend selection
  * Fixed issue #706: Integer overflow in DetermineScrollDirections when timeGetTime wraps
  * Fixed issue #407: TVirtualDrawTree.InvalidateNode does not clear vsHeightMeasured
  * Enhancement #669: Create sample project for C++ Builder
  * Enhancement #708: New option toSyncCheckboxesWithSelection improves multi-selection for touch UI that synchonizes selection and check-state  
  * Fixed issue #717: The option toUseExplorerTheme does not draw lines in place of buttons removed by toAutoHideButtons
  * Fixed issue #716: Tab key navigation does not work properly with Auto Span Columns
  * Fixed issue #720: A review of all Demos is needed to fix GetText, GetHint, etc to assign in DFM instead of assigning in FormCreate
  
V6.6 (04 Apr 2017)
  * Fixed issue #705: Added support for RAD Studio 10.2 Tokyo
  * Fixed issue #702: Access Violation at designtime when RootNodeCount is >0
  * Fixed issue #703: Possibly wrong selection if nodes are selected during DeleteChildren()
  * Fixed issue #700: If the user clicked a node, we are no longer centering this node if the option toCenterScrollIntoView is set.
  * Fixed issue #691: When the user uses Cursor-Left/Right, the Virtual TreeView should perform horizontal scrolling if there is no other operation